[package]
name = "lua-macros"
version = "0.1.10"
readme = "README.md"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
description = "Useful macros to join Lua with Rust."
repository = "https://github.com/DenisKolodin/lua-macros"
license = "MIT/Apache-2.0"

[dependencies]
lua = { git = "https://github.com/jcmoyer/rust-lua53" }
